update brand view, button view

--- a/SelfUI/SelfUI/en.lproj/Localizable.strings
+++ b/SelfUI/SelfUI/en.lproj/Localizable.strings
@@ -13,3 +13,5 @@
 
 "Take a selfie" = "First take a Selfie. (nobody else will see it)";
 "Take a selfie description" = "It’s not a photo. The Self app just needs to be able to recognise you as it’s owner. On the next screen keep your face in the box and follow the instructions.";
+
+"Start" = "Start";
