--- a/SelfUI/SelfUI/en.lproj/Localizable.strings
+++ b/SelfUI/SelfUI/en.lproj/Localizable.strings
@@ -14,4 +14,7 @@
 "Take a selfie" = "First take a Selfie. (nobody else will see it)";
 "Take a selfie description" = "It’s not a photo. The Self app just needs to be able to recognise you as it’s owner. On the next screen keep your face in the box and follow the instructions.";
 
+"Verification failed" = "Verification failed.";
+"Liveness verification failed" = "We were not able to match your image to your previous Selfie. For security we can’t allow you to use this Self account. \n\nIf you like, you can try again; \nYou have 2 more verification attempts. \n\nOr alternatively you can uninstall and reinstall Self. ";
+
 "Start" = "Start";
