--- a/SelfUI/SelfUI/Resources/en.lproj/Localizable.strings
+++ b/SelfUI/SelfUI/Resources/en.lproj/Localizable.strings
@@ -20,5 +20,7 @@
 // passports
 "Passport verification preparation" = "First, you need to verify some information. You’ll need your Passport.";
 "Passport verification preparation body" = "Self helps you to verify the data on your Passport so you can use it to prove things about yourself.";
+"title_ask_passport_chip" = "Does your Passport have this icon?";
+"detail_ask_passport_chip" = "It means you have a chip in your Passport which you can read with Self. If the data on the chip is readable we can verify you immediately.";
 
 "Start" = "Start";
