--- a/SelfUI/SelfUI/Resources/en.lproj/Localizable.strings
+++ b/SelfUI/SelfUI/Resources/en.lproj/Localizable.strings
@@ -23,4 +23,11 @@
 "title_ask_passport_chip" = "Does your Passport have this icon?";
 "detail_ask_passport_chip" = "It means you have a chip in your Passport which you can read with Self. If the data on the chip is readable we can verify you immediately.";
 
+"title_cant_create_self_account" = "We’re Sorry, but you can’t open an account \njust yet. We will let you know as soon as you can.";
+"detail_cant_create_self_account" = "Please leave the app installed and it will notify you when it’s time to try again.";
+
+// buttons
 "Start" = "Start";
+"Continue" = "Continue";
+"Yes" = "Yes";
+"No" = "No";
