--- a/SelfUI/SelfUI/Resources/en.lproj/Localizable.strings
+++ b/SelfUI/SelfUI/Resources/en.lproj/Localizable.strings
@@ -32,6 +32,7 @@
 
 "title_capture_passport" = "Now capture your passport.";
 "detail_capture_passport" = "Open your passport at the photo page, fill the box you see on the next screen with the passport information.";
+"Having trouble?" = "Having trouble?";
 
 // buttons
 "Start" = "Start";
@@ -40,3 +41,4 @@
 "No" = "No";
 "Capture" = "Capture";
 "Identity document" = "Identity document";
+"Enter data manually" = "Enter data manually";
