--- a/SelfUI/SelfUI/Resources/en.lproj/Localizable.strings
+++ b/SelfUI/SelfUI/Resources/en.lproj/Localizable.strings
@@ -53,3 +53,4 @@
 "Identity document" = "Identity document";
 "Enter data manually" = "Enter data manually";
 "Start scan" = "Start scan";
+"Get Started" = "Get Started";
