--- a/SelfUI/SelfUI/Resources/en.lproj/Localizable.strings
+++ b/SelfUI/SelfUI/Resources/en.lproj/Localizable.strings
@@ -76,3 +76,6 @@
 
 "onboarding_thankyou_title" = "Thank you!";
 "i_agree" = "I agree";
+"To join Self, please agree to our" = "To join Self, please agree to our";
+"terms & conditions" = "terms & conditions";
+"privacy policy" = "privacy policy.";
