--- a/SelfUI/SelfUI/Resources/en.lproj/Localizable.strings
+++ b/SelfUI/SelfUI/Resources/en.lproj/Localizable.strings
@@ -54,3 +54,28 @@
 "Enter data manually" = "Enter data manually";
 "Start scan" = "Start scan";
 "Get Started" = "Get Started";
+"button_signup_now" = "Sign Up Now";
+"button_next" = "Next";
+"button_joinself" = "Join Self";
+
+// Onboarding
+"welcome_title" = "Welcome to your Self.";
+"welcome_message" = "We’re really happy you chose to join us. Please complete the signup process to get started.";
+
+"secure_communication_title" = "Communicate safely and privately.";
+"secure_communication_description" = "Self gives you secure, privacy first communications with people you know and trust.";
+
+"control_data_title" = "Take back control of your data now.";
+"control_data_description" = "Self is a wallet in your phone where you can store your data securely, share your data safely and make your data work for you.";
+
+"start_self_today_title" = "Start today.\nJoin Self.";
+"start_self_today_description" = "It’s fast and easy to sign up. Just verify some information and you’re in.";
+
+"the_really_important_bit_title" = "The really important bit.";
+"the_really_important_bit_description" = "We never keep your data – it’s only ever stored on your phone. \n\nYour data is  never visible to anyone without your permission.";
+
+"onboarding_thankyou_title" = "Thank you!";
+"i_agree" = "I agree";
+"To join Self, please agree to our" = "To join Self, please agree to our";
+"terms & conditions" = "terms & conditions";
+"privacy policy" = "privacy policy.";
