--- a/SelfUI/SelfUI/Resources/en.lproj/Localizable.strings
+++ b/SelfUI/SelfUI/Resources/en.lproj/Localizable.strings
@@ -57,6 +57,8 @@
 "button_signup_now" = "Sign Up Now";
 "button_next" = "Next";
 "button_joinself" = "Join Self";
+"button_verify_email" = "Verify Email";
+"button_send_code" = "Send code";
 
 // Onboarding
 "welcome_title" = "Welcome to your Self.";
@@ -79,3 +81,11 @@
 "To join Self, please agree to our" = "To join Self, please agree to our";
 "terms & conditions" = "terms & conditions";
 "privacy policy" = "privacy policy.";
+
+// MARK: - Email
+"email_introduction_title" = "Thanks, now  we need  to send you an email so we can confirm your email address.";
+"email_introduction_description" = "We will send you a code which you will need to enter to confirm you have access to that email. \n\nWe don’t keep your email or use it to send you messages. Ever.";
+"enter_email_title" = "Please enter your  email.";
+"email_address" = "Email address";
+"email_address_placeholder" = "youremail@example.com";
+"email_address_invalid_message" = "Please enter a valid email address.";
