--- a/SelfUI/SelfUI/Resources/en.lproj/Localizable.strings
+++ b/SelfUI/SelfUI/Resources/en.lproj/Localizable.strings
@@ -60,6 +60,7 @@
 "button_verify_email" = "Verify Email";
 "button_send_code" = "Send code";
 "button_sms" = "Send SMS";
+"button_confirm_name" = "Confirm Name";
 
 // Onboarding
 "welcome_title" = "Welcome to your Self.";
@@ -103,3 +104,12 @@
 // MARK: - Phone
 "verify_phone_introduction_title" = "Thank you. Next we need you to send us an SMS so we can verify your phone.";
 "verify_phone_introduction_description" = "You send us a pre-formatted SMS which verifies you have access to the number. \n\nWe don’t keep your number or use it to send you messages. Ever. ";
+
+
+// MARK: - Create account
+"create_account_name_title" = "What do you want to be called?";
+"enter_name_label" = "Enter the name people normally know you by";
+"enter_name_placeholder" = "Your name";
+"enter_name_error" = "This field cannot be empty.";
+"creating_account_title" = "That’s everything!";
+"creating_account_description" = "We’re just creating your Self account...";
