--- a/SelfUI/Example/Resources/en.lproj/Localizable.strings
+++ b/SelfUI/Example/Resources/en.lproj/Localizable.strings
@@ -64,8 +64,8 @@
 "button_turn_on_notifications" = "Turn on notifications";
 
 // Onboarding
-"welcome_title" = "Welcome to your Self.";
-"welcome_message" = "We’re really happy you chose to join us. Please complete the signup process to get started.";
+"welcome_title" = "Welcome to Self.";
+"welcome_message" = "We’re really happy you chose to join us.\nPlease complete the signup process to get started. Which one applies to you?";
 
 "secure_communication_title" = "Communicate safely and privately.";
 "secure_communication_description" = "Self gives you secure, privacy first communications with people you know and trust.";
