improve display of t&c text in thank you page

--- a/SelfUI/SelfUI/Resources/en.lproj/Localizable.strings
+++ b/SelfUI/SelfUI/Resources/en.lproj/Localizable.strings
@@ -84,7 +84,7 @@
 
 "onboarding_thankyou_title" = "Thank you!";
 "i_agree" = "I agree";
-"To join Self, please agree to our" = "To join Self, please agree to our";
+"agree_term_condition" = "To join Self, please agree to our";
 "terms & conditions" = "terms & conditions";
 "privacy policy" = "privacy policy.";
 
