--- a/SelfUI/SelfUI/Resources/en.lproj/Localizable.strings
+++ b/SelfUI/SelfUI/Resources/en.lproj/Localizable.strings
@@ -66,7 +66,12 @@
 "button_exit_scanner" = "Exit Scanner";
 "button_try_again" = "Try Again";
 "button_accept" = "Accept";
+"button_agree" = "Agree";
 "button_reject" = "Reject";
+
+"label_rejected" = "Rejected";
+"label_agreed" = "Agreed";
+"label_accepted" = "Accepted";
 
 "I’m going to develop with Self" = "I’m going to develop with Self";
 
