--- a/SelfUI/SelfUI/Resources/en.lproj/Localizable.strings
+++ b/SelfUI/SelfUI/Resources/en.lproj/Localizable.strings
@@ -40,6 +40,11 @@
 "msg_document_verified" = "Your document has been verified.";
 "msg_document_failed" = "We have encountered a problem verifying your document. We will contact you shortly via your verified email.";
 
+"capture_document_introduction" = "You’re going to capture your ID document and use Self to verify it.";
+"msg_capture_document_introduction" = "Self lets you compare the data you have on your document with your image to create a verifiable credential. We process some data transiently using cloud services. Data is never retained by Self or any of our providers. It is only stored on your phone or in your backup.";
+"capture_document_front" = "Now capture the front of your ID.";
+"msg_capture_document_front" = "Fill the box you see on the next screen with your document to capture in the information.";
+
 // mrz fields
 "title_enter_mrz_fields" = "Confirm passport information";
 "passport_number" = "Passport number";
