add check document nfc view

--- a/SelfUI/SelfUI/Resources/en.lproj/Localizable.strings
+++ b/SelfUI/SelfUI/Resources/en.lproj/Localizable.strings
@@ -25,6 +25,8 @@
 "Passport verification preparation" = "First, you need to verify some information. You’ll need your Passport.";
 "Passport verification preparation body" = "Self helps you to verify the data on your Passport so you can use it to prove things about yourself.";
 "title_ask_passport_chip" = "Does your Passport have this icon?";
+"title_ask_document_chip" = "Does your %@ have this icon?";
+"detail_ask_document_chip" = "It means you have a chip in your %@ or document which you can read with Self. If the data on the chip is readable we can verify you immediately. ";
 "detail_ask_passport_chip" = "It means you have a chip in your Passport which you can read with Self. If the data on the chip is readable we can verify you immediately.";
 
 "title_cant_create_self_account" = "We’re Sorry, but you can’t open an account \njust yet. We will let you know as soon as you can.";
