add document verifying view

--- a/SelfUI/SelfUI/Resources/en.lproj/Localizable.strings
+++ b/SelfUI/SelfUI/Resources/en.lproj/Localizable.strings
@@ -40,6 +40,7 @@
 "title_passport_scanning_passport" = "Don’t move the phone. Your passport is being checked.";
 
 "msg_document_verified" = "Your document has been verified.";
+"msg_document_verifying" = "Please wait while we verify your document.";
 "msg_document_failed" = "We have encountered a problem verifying your document. We will contact you shortly via your verified email.";
 
 "capture_document_introduction" = "You’re going to capture your ID document and use Self to verify it.";
