--- a/SelfUI/SelfUI/Resources/en.lproj/Localizable.strings
+++ b/SelfUI/SelfUI/Resources/en.lproj/Localizable.strings
@@ -85,6 +85,7 @@
 "button_signed" = "Signed";
 "button_continue" = "Continue";
 "button_backup_now" = "Backup Now";
+"button_done" = "Done";
 
 "label_rejected" = "Rejected";
 "label_agreed" = "Agreed";
@@ -158,6 +159,7 @@
 // MARK: - Backup Restore
 "title_backup" = "Backup now.";
 "msg_backup" = "Backup immediately to test functionality or to prepare for deleting and reinstalling the app.";
+"title_backup_done" = "Backup successful.";
 
 // MARK: - Tabs
 "tab_messaging" = "Messaging";
