update welcome view

--- a/SelfUI/SelfUI/Resources/en.lproj/Localizable.strings
+++ b/SelfUI/SelfUI/Resources/en.lproj/Localizable.strings
@@ -86,6 +86,7 @@
 "button_continue" = "Continue";
 "button_backup_now" = "Backup Now";
 "button_done" = "Done";
+"button_recover_account" = "Recover Account";
 
 "label_rejected" = "Rejected";
 "label_agreed" = "Agreed";
